data/derived/sp14/progs/unify/prog3180.ml.out
Characters 174-175:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list -> int list -> int
       but an expression was expected of type
         int list -> int list -> int list
       Type int is not compatible with type int list 
